# aws_lambda_sample_python

./: Dockerfile  README.md  pyproject.toml
aws_lambda_sample_python/: lambda_function.py
src/aws_lambda_sample_python/: lambda_function.py  schemas.py
tests/: lambda_function_test.py
