[tool.poetry]
name = "aws_lambda_sample_python"
version = "0.1.0"
description = ""
authors = ["dtorannpu <dtorannpu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
