[tool.poetry]
name = "aws_lambda_sample_python"
version = "0.1.0"
description = ""
authors = ["dtorannpu <dtorannpu@gmail.com>"]
readme = "README.md"
packages = [{include = "aws_lambda_sample_python", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = "^2.42.0"
fastjsonschema = "^2.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
